# ATNLP_FINAL

./: .gitignore  README.md  dataset_llama.py  pyproject.toml  train.py  train_llama.py
experiments/: train_exp_1.py  train_exp_2.py  train_exp_3.py
llama/: eval.py  llama_test.py  save_model.py
src/: train.py  train_llama.py
src/data/: dataset_llama.py
src/experiments/: train_exp_1.py  train_exp_2.py  train_exp_3.py
src/utils/: llama_3.1_template.jinja  utils.py
utils/: utils.py
