[tool.poetry]
name = "atnlp-transformer"
version = "0.1.0"
description = "reimplementation of experiments from the paper Generalization wit"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
torch = "^2.5.1"
torchmetrics = "^1.6.0"
tqdm = "^4.67.1"
ruff = "^0.8.3"
tensorboard = "^2.18.0"
rich = "^13.9.4"
unsloth = {git = "https://github.com/unslothai/unsloth.git"}
datasets = "^3.2.0"
bitsandbytes = "^0.45.0"
unsloth-zoo = "^2025.1.3"
vllm = "^0.6.6.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
